Cleanup the rest of intro Pandas section

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -209,12 +209,12 @@
    "source": [
     "### Looking at the data\n",
     "\n",
-    "I got the following data to look at [here](http://archive.ics.uci.edu/ml/machine-learning-databases/forest-fires/), the UCI repository of open data sets. I'm just going to detail four methods for looking at our data: info(), describe(), head(), and tail(). "
+    "I got the following data to look at [here](http://archive.ics.uci.edu/ml/machine-learning-databases/forest-fires/), the UCI repository of open data sets. I'm going to detail a lot of what we use to look at our data, and get a kind of overall sense of what it looks like (before we dive in). Two attributes that are availiable on our dataframe to help us look at our data are `shape` and `columns`. Four methods that are availiable on our dataframe for looking at our data: `info()`, `describe()`, `head()`, and `tail()`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
        "(517, 13)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +261,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -303,13 +303,14 @@
     }
    ],
    "source": [
-    "# Gives us a very high level overview of our data. \n",
+    "# Gives us a very high level overview of our data. This tells us if/how many N/A's are present\n",
+    "# in each column, as well as the type of data that is in each column (int, float, string, timestamp). \n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -474,15 +475,42 @@
        "max     33.300000  100.000000    9.400000    6.400000  1090.840000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Gives us a more detailed look at each of the columns in our dataset. Note that it \n",
-    "# doesn't include non-numeric columns in this summary. \n",
+    "# doesn't typically include non-numeric columns in this summary. \n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     517\n",
+       "unique     12\n",
+       "top       aug\n",
+       "freq      184\n",
+       "Name: month, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is how we could look at our non-numeric columns.\n",
+    "df['month'].describe()"
    ]
   },
   {
