Touch up indexing section

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -306,6 +306,13 @@
     "# Gives us a very high level overview of our data. This tells us if/how many N/A's are present\n",
     "# in each column, as well as the type of data that is in each column (int, float, string, timestamp). \n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What do you think the `object` data type is above?"
    ]
   },
   {
@@ -787,22 +794,24 @@
    "source": [
     "# A little bit more of Pandas...\n",
     "\n",
-    "There are LOADS of things you can do with a Pandas DataFrame. For those of you who have worked in R, know that they were inspired by R DataFrames, and so most (if not all) of the stuff you could do in R, you can probably do here. Tonight I'm going to focus on some of the more common things that you can do with DataFrames (it would take too long to cover everything). If you want to view all of the available attributes and methods of DataFrames, you can check out the [Pandas Docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). If you want practical examples of how you might use DataFrames, I might suggest getting a copy of [Python for Data Analysis](http://shop.oreilly.com/product/0636920023784.do).\n",
+    "There are LOADS of things you can do with a Pandas DataFrame. For those of you who have worked in R, know that they were inspired by R DataFrames, and so most (if not all) of the stuff you could do in R, you can probably do here. Tonight I'm going to focus on some of the more common things that you can do with DataFrames (it would take too long to cover everything). If you want to view all of the available attributes and methods of DataFrames, you can check out the [Pandas Docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). If you want practical examples of how you might use DataFrames, I might suggest getting a copy of [Python for Data Analysis](http://shop.oreilly.com/product/0636920023784.do) (it's written by Wes McKinney, the creator of Pandas).\n",
     "\n",
     "Alright, let's dive in...\n",
     "\n",
     "### Indexing to Grab your Data\n",
     "\n",
-    "Let's start off with some basic indexing. This will allow you to grab the columns, rows, etc. that you want, if you're ever in need. When we index into DataFrames, we will always be using some form of bracket notation `[]`, with two sets of numbers/strings in there separated by a comma (i.e. `[number/letter, number/letter]`. The first number will always be a reference to rows, while the second will always be a reference to columns. \n",
+    "Let's start off with some basic indexing. This will allow you to grab the columns, rows, etc. that you want. When we index into DataFrames, we will always be using some form of bracket notation `[]`, with one or two sets of numbers/strings in there. If it's two sets, then they will be separated by a comma (something like `[number/letter, number/letter]`). The first number will always be a reference to rows, while the second will always be a reference to columns. \n",
     "\n",
-    "If we want to grab entire rows, then we can simply index into our DataFrame almost like we would a list - `df[rows_to_grab]`. The only caveat is that you have to use two indices separated by a `:`. If we want to grab entire columns, then we can grab those by using bracket notation (`df[column_name]`) or dot notation (df.column_name). The one caveat here is that if you are going to use dot notation, you cannot have any spaces in your column name.\n",
+    "If we want to grab entire rows, then we can simply index into our DataFrame almost like we would a list - `df[rows_to_grab]`. The only caveat is that you have to use two **indices** separated by a `:`. If we want to grab entire columns, then we can grab those by using bracket notation (`df[column_name]`) or dot notation (df.column_name). The one caveat here is that if you are going to use dot notation, you cannot have any spaces in your column name.\n",
     "\n",
-    "If we want to grab only certain rows and columns, there are three methods that we can use to index into a Pandas DataFrame: `.loc[]`, `.iloc[]`, and `.ix[]`. `.loc[]` is a purely label-location based indexer, `.iloc[]` is a purely integer-location based indexer, and `.ix[]` is a primarily label-location based indexer that falls back to integer indexing. Note that if we wanted to specify "
+    "If we want to grab only certain rows **and** columns, there are three methods that we can use to index into a Pandas DataFrame: `.loc[]`, `.iloc[]`, and `.ix[]`. \n",
+    "\n",
+    "`.loc[]` is a **purely label-location** based indexer, `.iloc[]` is a **purely integer-location** based indexer, and `.ix[]` is a **primarily label-location** based indexer that **falls back to integer indexing**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -813,7 +822,7 @@
        "Int64Index([0, 1], dtype='int64')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -872,13 +881,13 @@
        "1  4  5  6   7"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df # Let's just remember what it looks like. "
    ]
   },
   {
@@ -925,12 +934,30 @@
     }
    ],
    "source": [
-    "df[:1] # Note that df[1] or df[0] would not have worked."
+    "df[:1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What do you think would happen if we tried to access the first or second row using df[0] and df[1]?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Empty cell to test the answer to the question above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -943,7 +970,7 @@
        "Name: c, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,29 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[:, 'a'] # Note that df.loc[:, 1] would fail here. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -990,13 +995,55 @@
        "Name: a, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[:, 0] # Note that df.iloc[:, 'a'] would fail here. "
+    "df.loc[:, 'a'] # Note that df.loc[:, 1] would fail here. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    4\n",
+       "Name: a, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What happens if we try df.iloc[:, 'a'] here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Empty cell to test answer. "
    ]
   },
   {
@@ -1191,26 +1238,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How would I use `.iloc[]` to grab that same 1.0 value?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.iloc[0, 0] # Note that df.iloc['T', 'a'] would have failed, as would have df.iloc['T', 0], \n",
-    "              # or df.iloc[0, 'a']. "
+    "# Empty cell for answer "
    ]
   },
   {
