--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1091,7 +1091,7 @@
        "Index([u'T', u'F'], dtype='object')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1277,7 +1277,7 @@
     "print df.ix[0, 0]\n",
     "print df.ix['T', 'a']\n",
     "print df.ix[0, 'a']\n",
-    "print df.ix['T', 0] # All of these work!"
+    "print df.ix['T', 0] # All of these work! Don't you just love .ix[]?"
    ]
   },
   {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1366,7 +1366,7 @@
        "Name: c, dtype: bool"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1399,23 +1399,28 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>T</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [a, b, c, d]\n",
-       "Index: []"
+       "   a  b  c   d\n",
+       "T  1  2  3 NaN"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
     "df[df['c'] == 3]  # Here we use the mask to grab the entire row."
    ]
   },
@@ -1423,7 +1428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While using a mask like above works, this can get really messy if you have multiple conditions that you want to specify... `df[(condition1) & (condition2) & (condition3)]`. Using the `.query()` method on DataFrames is typically perferred, as it makes your code much cleaner and easier to read. All you do is put your query into a string, and the place it into the `.query()` method. "
+    "While using a mask like above works, this can get really messy if you have multiple conditions that you want to specify... `df[(condition1) & (condition2) & (condition3)]`. Using the `.query()` method on DataFrames is typically perferred, as it makes your code much cleaner and easier to read. All you do is put your query into a string, and then place it into the `.query()` method. "
    ]
   },
   {
@@ -1575,6 +1580,166 @@
     "b = 2\n",
     "a = 1\n",
     "df.query('c == @c and b == @b and a == @a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next section, we're going to be looking at the forestfires data from the UCI website. Before we get there, though, let's see if we can use the `query()` method to pull some rows from our data. Let's take a quick look at what the data looks like..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>FFMC</th>\n",
+       "      <th>DMC</th>\n",
+       "      <th>DC</th>\n",
+       "      <th>ISI</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>94.3</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>tue</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>669.1</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>sat</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>43.7</td>\n",
+       "      <td>686.9</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>97</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>sun</td>\n",
+       "      <td>89.3</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>102.2</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X  Y month  day  FFMC   DMC     DC  ISI  temp  RH  wind  rain  area\n",
+       "0  7  5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7   0.0     0\n",
+       "1  7  4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9   0.0     0\n",
+       "2  7  4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3   0.0     0\n",
+       "3  8  6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0   0.2     0\n",
+       "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0     0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('data/forestfires.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How would I grab all rows where the month is equal to March, and the temp. is greater than 16?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Empty cell for answer. "
    ]
   },
   {
