Cleanup through combining datasets section

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -1750,14 +1750,14 @@
    "source": [
     "## What else can I do with my data?\n",
     "\n",
-    "Anything! The world is your oyster! Seriously, though, chances are high that you can do whatever you're imagining (within reason) with your data in a Pandas DataFrame. I've already mentioned that Pandas DataFrame's are based off R's dataframes, and so anything you can do in R's dataframes, I imagine you can do in Pandas DataFrames. For those of you from SQL, though, I imagine you can do pretty much anything you would want to do in SQL in Pandas DataFrames. \n",
+    "Anything! The world is your oyster! Seriously, though, chances are high that you can do whatever you're imagining (within reason) with your data in a Pandas DataFrame. I've already mentioned that Pandas DataFrame's are based off R's dataframes, and so anything you can do in R's dataframes, I imagine you can do in Pandas DataFrames. For those of you from SQL, though, I imagine you can do pretty much anything you would want to do in SQL in Pandas DataFrames (with some slightly different syntax). \n",
     "\n",
     "Starting with `groupby`'s..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1879,16 +1879,13 @@
        "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0     0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Note we're moving back to using the forest-fires data, so that we have something meaningful \n",
-    "# to look at. \n",
-    "import pandas as pd\n",
-    "df = pd.read_csv('data/forestfires.csv')\n",
+    "# We're still using the forest fires data set. \n",
     "df.head()"
    ]
   },
@@ -3281,264 +3278,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also sort by multiple columns, and sort a groupby object. It will sort in order (i.e. below it will sort by `temp` first and then `wind`). So let's say we wanted to order the months by lowest average `temp`, and then lowest average `wind`..."
+    "We can also sort by multiple columns... \n",
+    "\n",
+    "##### How do you think we would sort by month, and then temperature? What if we wanted to add wind, too?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>FFMC</th>\n",
-       "      <th>DMC</th>\n",
-       "      <th>DC</th>\n",
-       "      <th>ISI</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>RH</th>\n",
-       "      <th>wind</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>area</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>dec</th>\n",
-       "      <td>4.555556</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>84.966667</td>\n",
-       "      <td>26.122222</td>\n",
-       "      <td>351.244444</td>\n",
-       "      <td>3.466667</td>\n",
-       "      <td>4.522222</td>\n",
-       "      <td>38.444444</td>\n",
-       "      <td>7.644444</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>13.330000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jan</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>4.500000</td>\n",
-       "      <td>50.400000</td>\n",
-       "      <td>2.400000</td>\n",
-       "      <td>90.350000</td>\n",
-       "      <td>1.450000</td>\n",
-       "      <td>5.250000</td>\n",
-       "      <td>89.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>feb</th>\n",
-       "      <td>5.150000</td>\n",
-       "      <td>4.400000</td>\n",
-       "      <td>82.905000</td>\n",
-       "      <td>9.475000</td>\n",
-       "      <td>54.670000</td>\n",
-       "      <td>3.350000</td>\n",
-       "      <td>9.635000</td>\n",
-       "      <td>55.700000</td>\n",
-       "      <td>3.755000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.275000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nov</th>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>79.500000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>106.700000</td>\n",
-       "      <td>1.100000</td>\n",
-       "      <td>11.800000</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>4.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>apr</th>\n",
-       "      <td>5.777778</td>\n",
-       "      <td>4.222222</td>\n",
-       "      <td>85.788889</td>\n",
-       "      <td>15.911111</td>\n",
-       "      <td>48.555556</td>\n",
-       "      <td>5.377778</td>\n",
-       "      <td>12.044444</td>\n",
-       "      <td>46.888889</td>\n",
-       "      <td>4.666667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.891111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mar</th>\n",
-       "      <td>4.722222</td>\n",
-       "      <td>4.481481</td>\n",
-       "      <td>89.444444</td>\n",
-       "      <td>34.542593</td>\n",
-       "      <td>75.942593</td>\n",
-       "      <td>7.107407</td>\n",
-       "      <td>13.083333</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>4.968519</td>\n",
-       "      <td>0.003704</td>\n",
-       "      <td>4.356667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>may</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>87.350000</td>\n",
-       "      <td>26.700000</td>\n",
-       "      <td>93.750000</td>\n",
-       "      <td>4.600000</td>\n",
-       "      <td>14.650000</td>\n",
-       "      <td>67.000000</td>\n",
-       "      <td>4.450000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>19.240000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>oct</th>\n",
-       "      <td>5.866667</td>\n",
-       "      <td>4.333333</td>\n",
-       "      <td>90.453333</td>\n",
-       "      <td>41.420000</td>\n",
-       "      <td>681.673333</td>\n",
-       "      <td>7.146667</td>\n",
-       "      <td>17.093333</td>\n",
-       "      <td>37.466667</td>\n",
-       "      <td>3.460000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.638000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sep</th>\n",
-       "      <td>4.383721</td>\n",
-       "      <td>4.116279</td>\n",
-       "      <td>91.243023</td>\n",
-       "      <td>120.922674</td>\n",
-       "      <td>734.615698</td>\n",
-       "      <td>8.577326</td>\n",
-       "      <td>19.612209</td>\n",
-       "      <td>42.843023</td>\n",
-       "      <td>3.557558</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>17.942616</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jun</th>\n",
-       "      <td>6.294118</td>\n",
-       "      <td>4.823529</td>\n",
-       "      <td>89.429412</td>\n",
-       "      <td>93.382353</td>\n",
-       "      <td>297.705882</td>\n",
-       "      <td>11.776471</td>\n",
-       "      <td>20.494118</td>\n",
-       "      <td>45.117647</td>\n",
-       "      <td>4.135294</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5.841176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>aug</th>\n",
-       "      <td>4.483696</td>\n",
-       "      <td>4.282609</td>\n",
-       "      <td>92.336957</td>\n",
-       "      <td>153.732609</td>\n",
-       "      <td>641.077717</td>\n",
-       "      <td>11.072283</td>\n",
-       "      <td>21.631522</td>\n",
-       "      <td>45.489130</td>\n",
-       "      <td>4.086413</td>\n",
-       "      <td>0.058696</td>\n",
-       "      <td>12.489076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jul</th>\n",
-       "      <td>5.218750</td>\n",
-       "      <td>4.593750</td>\n",
-       "      <td>91.328125</td>\n",
-       "      <td>110.387500</td>\n",
-       "      <td>450.603125</td>\n",
-       "      <td>9.393750</td>\n",
-       "      <td>22.109375</td>\n",
-       "      <td>45.125000</td>\n",
-       "      <td>3.734375</td>\n",
-       "      <td>0.006250</td>\n",
-       "      <td>14.369687</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              X         Y       FFMC         DMC          DC        ISI  \\\n",
-       "month                                                                     \n",
-       "dec    4.555556  5.000000  84.966667   26.122222  351.244444   3.466667   \n",
-       "jan    3.000000  4.500000  50.400000    2.400000   90.350000   1.450000   \n",
-       "feb    5.150000  4.400000  82.905000    9.475000   54.670000   3.350000   \n",
-       "nov    6.000000  3.000000  79.500000    3.000000  106.700000   1.100000   \n",
-       "apr    5.777778  4.222222  85.788889   15.911111   48.555556   5.377778   \n",
-       "mar    4.722222  4.481481  89.444444   34.542593   75.942593   7.107407   \n",
-       "may    5.000000  4.000000  87.350000   26.700000   93.750000   4.600000   \n",
-       "oct    5.866667  4.333333  90.453333   41.420000  681.673333   7.146667   \n",
-       "sep    4.383721  4.116279  91.243023  120.922674  734.615698   8.577326   \n",
-       "jun    6.294118  4.823529  89.429412   93.382353  297.705882  11.776471   \n",
-       "aug    4.483696  4.282609  92.336957  153.732609  641.077717  11.072283   \n",
-       "jul    5.218750  4.593750  91.328125  110.387500  450.603125   9.393750   \n",
-       "\n",
-       "            temp         RH      wind      rain       area  \n",
-       "month                                                       \n",
-       "dec     4.522222  38.444444  7.644444  0.000000  13.330000  \n",
-       "jan     5.250000  89.000000  2.000000  0.000000   0.000000  \n",
-       "feb     9.635000  55.700000  3.755000  0.000000   6.275000  \n",
-       "nov    11.800000  31.000000  4.500000  0.000000   0.000000  \n",
-       "apr    12.044444  46.888889  4.666667  0.000000   8.891111  \n",
-       "mar    13.083333  40.000000  4.968519  0.003704   4.356667  \n",
-       "may    14.650000  67.000000  4.450000  0.000000  19.240000  \n",
-       "oct    17.093333  37.466667  3.460000  0.000000   6.638000  \n",
-       "sep    19.612209  42.843023  3.557558  0.000000  17.942616  \n",
-       "jun    20.494118  45.117647  4.135294  0.000000   5.841176  \n",
-       "aug    21.631522  45.489130  4.086413  0.058696  12.489076  \n",
-       "jul    22.109375  45.125000  3.734375  0.006250  14.369687  "
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.groupby('month').mean().sort(['temp', 'wind'])"
+    "# Cell for answer"
    ]
   },
   {
@@ -3552,7 +3306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -3577,12 +3331,13 @@
        "Name: area, dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Here I'm finding the average squared area of burnage per month. \n",
     "df.groupby('month').mean()['area'].apply(lambda area: area**2)"
    ]
   },
@@ -3605,6 +3360,13 @@
    "source": [
     "df.fillna('0', inplace=True)\n",
     "df.dropna(inplace=True) # Notice the addition of the inplace argument here. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What do you think would have happened if I didn't add the `inplace` argument above?"
    ]
   },
   {
@@ -4640,7 +4402,7 @@
     }
    ],
    "source": [
-    "df.drop('rain', axis=1)"
+    "df.drop('rain', axis=1) # Note the lack of the inplace argument."
    ]
   },
   {
@@ -4773,7 +4535,7 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head() # Our dataframe still contains the rain column! But why!?"
    ]
   },
   {
@@ -4900,155 +4662,26 @@
     }
    ],
    "source": [
-    "df.drop('rain', axis=1, inplace=True)\n",
+    "df.drop('rain', axis=1, inplace=True) \n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How do you think I would create a new column that is the sum of the wind and temp columns?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>FFMC</th>\n",
-       "      <th>DMC</th>\n",
-       "      <th>DC</th>\n",
-       "      <th>ISI</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>RH</th>\n",
-       "      <th>wind</th>\n",
-       "      <th>area</th>\n",
-       "      <th>wind_plus)area</th>\n",
-       "      <th>wind_plus_area</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>mar</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>86.2</td>\n",
-       "      <td>26.2</td>\n",
-       "      <td>94.3</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>51</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>6.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>oct</td>\n",
-       "      <td>tue</td>\n",
-       "      <td>90.6</td>\n",
-       "      <td>35.4</td>\n",
-       "      <td>669.1</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>oct</td>\n",
-       "      <td>sat</td>\n",
-       "      <td>90.6</td>\n",
-       "      <td>43.7</td>\n",
-       "      <td>686.9</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>14.6</td>\n",
-       "      <td>33</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>mar</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>91.7</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>77.5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>97</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>mar</td>\n",
-       "      <td>sun</td>\n",
-       "      <td>89.3</td>\n",
-       "      <td>51.3</td>\n",
-       "      <td>102.2</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>11.4</td>\n",
-       "      <td>99</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   X  Y month  day  FFMC   DMC     DC  ISI  temp  RH  wind  area  \\\n",
-       "0  7  5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7     0   \n",
-       "1  7  4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9     0   \n",
-       "2  7  4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3     0   \n",
-       "3  8  6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0     0   \n",
-       "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8     0   \n",
-       "\n",
-       "   wind_plus)area  wind_plus_area  \n",
-       "0             6.7             6.7  \n",
-       "1             0.9             0.9  \n",
-       "2             1.3             1.3  \n",
-       "3             4.0             4.0  \n",
-       "4             1.8             1.8  "
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['wind_plus_area'] = df['wind'] + df['area']\n",
-    "df.head()"
+    "# Cell for answer"
    ]
   },
   {
